# clip-files-ui

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.example.yaml  config.yaml  docker-compose.yml  main.py  pyproject.toml
templates/: index.html
tests/: __init__.py  test_main.py
