[project]
name = "clip-files-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.0",
    "jinja2",
    "pyyaml",
    "tiktoken",
    "pyperclip",
    "python-multipart",
    "clip-files>=0.4.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
